--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,16 @@ a {
     background: black;
   }
 }
+
+
+/*
+.center {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.center > img {
+  margin-bottom: 10px;
+  height:200px;
+}*/
